tweaking css, trying to fix mobile alignment woes

--- a/app/assets/stylesheets/photobooth.css
+++ b/app/assets/stylesheets/photobooth.css
@@ -176,7 +176,7 @@ body.night h1 {
 }
 #score {
   font-size: 12px;
-  color: #333;
+  color: #000;
   opacity: 0.6;
 }
 #hatcount {
